...
        android:id="@+id/resultsFragment"
        android:name="com.mvnsh.citizenship.ui.quiz.ResultsFragment"
        android:label="resultsFragment"
        />

    <fragment
        android:id="@+id/mockIntroFragment"
        android:name="com.mvnsh.citizenship.ui.mock.MockIntroFragment"
        android:label="mockIntroFragment"
        />

    <fragment
        android:id="@+id/mockFragment"
        android:name="com.mvnsh.citizenship.ui.mock.MockFragment"
        android:label="mockFragment"
        />

    <fragment
        android:id="@+id/mockResultsFragment"
        android:name="com.mvnsh.citizenship.ui.mock.MockResultsFragment"
        android:label="mockResultsFragment"
        />

    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.mvnsh.citizenship.ui.review.ReviewFragment"
        android:label="reviewFragment"
        />

    <fragment
        android:id="@+id/weakFragment"
...
